Fix comment input field overlap

--- a/frontend/src/app/components/blog-post-view/blog-post-view.component.scss
+++ b/frontend/src/app/components/blog-post-view/blog-post-view.component.scss
@@ -1,3 +1,7 @@
+ion-list {
+    margin-bottom: 90px;
+}
+
 .write-comment {
     position: fixed;
     bottom: 0px;
